aws/NetworkAcls-ca-central-1.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "SubnetId": "subnet-534fae28", 
     "NetworkAclId": "acl-11509778", 
     "NetworkAclAssociationId": "aclassoc-0d05de64"
    }, 
    {
     "SubnetId": "subnet-bad210d3", 
     "NetworkAclId": "acl-11509778", 
     "NetworkAclAssociationId": "aclassoc-0c05de65"
    }
   ], 
   "NetworkAclId": "acl-11509778", 
   "VpcId": "vpc-bc67a3d5", 
   "Tags": [], 
   "Entries": [
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }, 
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }
   ], 
   "IsDefault": true
  }
 ]
}
